2018-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cmyk.c (ReadCMYKImage): Free scanline buffer in error
	path. Fixes SourceForge issue #567 "small memory leak in rgb.c,
	gray.c and cmyk.c" reported by Petr Gajdos.

	* coders/gray.c (ReadGRAYImage): Free scanline buffer in error
	path. Fixes SourceForge issue #567 "small memory leak in rgb.c,
	gray.c and cmyk.c" reported by Petr Gajdos.

	* coders/rgb.c (ReadRGBImage): Free scanline buffer in error
	path. Fixes SourceForge issue #567 "small memory leak in rgb.c,
	gray.c and cmyk.c" reported by Petr Gajdos.

	* coders/jpeg.c (ReadJPEGImage): Avoid memory leak of profile
	buffer when longjmp-based exception is thrown while reading a
	profile. Fixes oss-fuzz 8957 "graphicsmagick/enhance_fuzzer:
	Direct-leak in ReadGenericProfile". (Credit to OSS-Fuzz)

2018-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (load_level): Make sure to free 'tile_image' before
	returning exception.  Fixes oss-fuzz 8935
	"graphicsmagick/coder_XCF_fuzzer: Indirect-leak in
	CloneImage". (Credit to OSS-Fuzz)

	* coders/jpeg.c (ReadJPEGImage): Allow three warnings of any given
	type before promoting the next warning of the same type to a hard
	error.  The warning limit may be adjusted by the user using
	-define jpeg:max-warnings=<value>.  Fixes oss-fuzz 8704
	"graphicsmagick/coder_JPG_fuzzer: Out-of-memory in
	graphicsmagick_coder_JPG_fuzzer". (Credit to OSS-Fuzz)

	* coders/png.c (ReadPNGImage): Detect EOF when reading
	magic_number.  Fixes oss-fuzz 8944
	"graphicsmagick/coder_PNG_fuzzer: Use-of-uninitialized-value in
	ReadPNGImage".  (Credit to OSS-Fuzz)
	(ReadPNGImage, ReadJNGImage): Makes sure that return value of
	ReadBlob() is always checked to detect EOF.

2018-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Re-structure exception reporting
	so that QuantumTransferMode() exceptions thrown for
	PLANARCONFIG_SEPARATE images are handled immediately.  Fixes