@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180620"
-#define public MagickPackageReleaseDate "snapshot-20180620"
+#define public MagickPackageVersionAddendum ".020180622"
+#define public MagickPackageReleaseDate "snapshot-20180622"
