@@ -35,6 +35,18 @@
 <div class="document">
 
 
+<p>2018-06-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/dpx.c (ReadDPXImage): Report exception on EOF file
+reading DPX pixel data. Fixes oss-fuzz 8104
+&quot;graphicsmagick/coder_DPX_fuzzer: Use-of-uninitialized-value in
+WriteDPXImage&quot;, oss-fuzz 8297 &quot;graphicsmagick/enhance_fuzzer:
+Use-of-uninitialized-value in EnhanceImage&quot;, and oss-fuzz 8133
+&quot;graphicsmagick/coder_DPX_fuzzer: Use-of-uninitialized-value in
+RGBTransformPackets&quot;. (Credit to OSS-Fuzz)</li>
+</ul>
+</blockquote>
 <p>2018-06-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
